tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_turbofish_count_function_call/execute__tests__compile_failure-174.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected 2 generics from this function, but 3 were provided
   ┌─ src/main.nr:23:21
   │
23 │             let _ = generic_func::<u64, Field, Field>();
   │                     ---------------------------------
   │

Aborting due to 1 previous error
