tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_turbofish_count_function_call/execute__tests__noirc_frontend_tests_incorrect_turbofish_count_function_call_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected 2 generics from this function, but 3 were provided
   ┌─ src/main.nr:23:21
   │
23 │             let _ = generic_func::<u64, Field, Field>();
   │                     ---------------------------------
   │

Aborting due to 1 previous error
